--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2018.08.14 00:00  Javier Gutierrez
+
+	* Adaption of website referenes to GitHub
+
+	New release 0.34
+
+2016.02.18 00:00  Javier Gutierrez
+
+	* Fixed uninitialized variables
+
 2015.10.27 00:00  Javier Gutierrez
 
 	* Updated specifications to TD.57 32.31
