--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020.06.07 00:00  Javier Gutierrez
+
+	* Fixed broken tests caused by the newer version of Test2::Util
+
+	New release 0.35
+
 2018.08.14 00:00  Javier Gutierrez
 
 	* Adaption of website referenes to GitHub
